alignment issues

--- a/exe/lines/style.css
+++ b/exe/lines/style.css
@@ -3,13 +3,11 @@ body {
 	cursor: crosshair;
 	background-color: #123;
 	overflow:hidden;
+	padding : 0;
 }
 
 canvas {
 	color: #234;
-	border: 3px solid;
-	margin: -10px;
-	margin-top : -100px;
 }
 
 div#button, div#score_board {
@@ -21,18 +19,20 @@ div#button, div#score_board {
 }
 
 div#score_board {
-	padding-right: 10vw;
-	padding-left: 10vw;
-	position : sticky;
+	position : absolute;
+	left: 20px;
+	right: 20px;
+	margin-left: auto;
+	margin-right: auto;
 	border-bottom-left-radius: 30px;
 	border-bottom-right-radius: 30px;
 	top:0;
 }
 
 div#button {
-	padding-right: 30vw;
-	padding-left:30vw;
-	position: sticky;
+	position : absolute;
+	left: 20px;
+	right: 20px;
 	border-top-left-radius: 30px;
 	border-top-right-radius: 30px;
 	bottom: 0;
